--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; 2024. All rights reserved.</li><li>Visit the official AE site: <a href="https://r.atlasearth.com/GZLEeFrzIKb">Atlas:Earth</a></li>
+								<li>&copy; 2024. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
