--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 										<p>Welcome to my (unofficial) beginner's guide to  the <a href="https://r.atlasearth.com/GZLEeFrzIKb" target="_blank">Atlas:Earth</a> app.</p>
 									</header>
 									<p>This guide is designed to help you get started with  Atlas:Earth, and earn as much as possible in your first days/weeks with the  app.  No, you will never &quot;get rich&quot;  playing this game.  However, it&rsquo;s a fun and  unique experience that will earn you some extra money.</p>
-								    <p>If you find this guide helpful, or you just want some extra  Atlas Dollars, consider using my referral code: <strong>TCFSUU</strong>.  More on referrals  can be found below.</p>
+								    <p>If you find this guide helpful, or you just want some extra  Atlas Bucks, consider using my referral code: <strong>TCFSUU</strong>.  More on referrals  can be found below.</p>
 </div>
 							</section>
 
