--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 								<div class="container">
 									<header class="major">
 										<h2>Atlas Earth Strategy Guide</h2>
-										<p>Welcome to my (unofficial) beginner's guide to  the <a href="https://r.atlasearth.com/GZLEeFrzIKb" target="_blank">Atlas:Earth</a> app.</p>
+										<p>Welcome to my (unofficial) beginner's guide to  the <a href="https://r.atlasearth.com/WgVkoQigxMb" target="_blank">Atlas:Earth</a> app.</p>
 									</header>
 									<p>This guide is designed to help you get started with  Atlas:Earth, and earn as much as possible in your first days/weeks with the  app.  No, you will never &quot;get rich&quot;  playing this game.  However, it&rsquo;s a fun and  unique experience that will earn you some extra money.</p>
-								    <p>If you find this guide helpful, or you just want some extra  Atlas Bucks, consider using my referral code: <strong>TCFSUU</strong>.  More on referrals  can be found below.</p>
+								    <p>If you find this guide helpful, or you just want some extra  Atlas Bucks, consider using my referral code: <strong>337U20</strong>.  More on referrals  can be found below.</p>
 </div>
 							</section>
 
@@ -73,7 +73,7 @@
                                     <h4>Do I need to spend money?</h4>
                                     <p>NO!  The rent you accumulate for your parcels is basically generated from a share in advertising revenue.  There are options to purchase Atlas Dollars, but you really do not need to use your real world money to advance in this game.</p>
                                     <h4>How do I install Atlas:Earth?</h4>
-                                    <p>You can download the app here: <a href="https://r.atlasearth.com/GZLEeFrzIKb" target="_blank">Atlas:Earth</a></p>
+                                    <p>You can download the app here: <a href="https://r.atlasearth.com/WgVkoQigxMb" target="_blank">Atlas:Earth</a></p>
                                     
 								</div>
 							</section>
@@ -84,7 +84,7 @@
 									<h3>Earning Atlas Bucks</h3>
 									<p>Atlas Bucks (AB) are the in-game currency for Atlas:Earth, which allow you to purchase parcels (land) and begin earning rent.  When you first create your account, you will be given 100 AB.  Here are the fastest ways to begin earning additional Atlas Bucks for free:</p>
 									<h4>Referrals</h4>
-                                    <p>Use a referral link or code when you first sign up.  If your friends aren’t playing yet, feel free to use my link (<a href="https://r.atlasearth.com/GZLEeFrzIKb" target="_blank">click here</a>) or enter my referral code (<strong>TCFSUU</strong>) into your settings (tap your user icon in the top-left corner, then select the settings icon).  Joining with a referral will give you 200 AB once you’ve acquired your 10th parcel.</p>
+                                    <p>Use a referral link or code when you first sign up.  If your friends aren’t playing yet, feel free to use my link (<a href="https://r.atlasearth.com/WgVkoQigxMb" target="_blank">click here</a>) or enter my referral code (<strong>337U20</strong>) into your settings (tap your user icon in the top-left corner, then select the settings icon).  Joining with a referral will give you 200 AB once you’ve acquired your 10th parcel.</p>
                                     <p>Essentially, it’s a <strong>20% bonus</strong>.  Once you’ve joined, send your referral code to your contacts.  As the referrer, you will receive 10 AB every time your friend acquires a new parcel.</p>
                                     <h4>Register your phone number</h4>
                                     <p>This can be done in the settings (tap your icon in the top-left), and you will receive 100 AB.  If you agree to receive text messages, you will get another 50 AB.  <strong>NOTE:</strong> I was hesitant to do this at first, but at the time of writing this (nearly 3 months into playing) I have not received a single text from Atlas:Earth.</p>
@@ -155,7 +155,7 @@
 								<h3>Atlas Explorer Club</h3>
 							    <p>Once you have purchased  5 or more passport badges, you will unlock the  the <strong>Atlas Explorer Club</strong>.	This	feature	does	cost actual money, and as such it may not be for everyone. As noted previously, it will take a very long time to recoup any real-world mony that you put into this game. However, if you are thinking about purchasing additional Atlas Bucks, the Explorer Club is by far the most cost-effective way to do so. </p>
 							    <p>The club works as a monthly subscription ($49.99), which can be cancelled at any time. The club provides an additional daily AB bonus alongside the Daily Login Bonus. Like the Daily Login Bonus, there are extra bonuses at regular intervals, including a 1200 AB bonus on day 90. These bonuses are collected in addition to those of the regular Daily Login. </p>
-							    <p>At the time of writing this, the Explorer Club cannot be joined within the app. To join the club, visit the official <a href="https://r.atlasearth.com/GZLEeFrzIKb" target="_blank">Atlas:Earth website</a>. </p>
+							    <p>At the time of writing this, the Explorer Club cannot be joined within the app. To join the club, visit the official <a href="https://r.atlasearth.com/WgVkoQigxMb" target="_blank">Atlas:Earth website</a>. </p>
 							  </div>
 							</section>
 
