--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar1.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Atlas Earth Strategy Guide</a></h1>
-					<p>Start earning passive income through virtual real-estate with these tips and strategies</p>
+					<p>Start earning passive income through virtual real-estate with these tips and strategies.</p>
 				</header>
 				<nav id="nav">
 					<ul>
