--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Atlas Earth Strategy Guide</title>
+		<title>Atlas Earth Strategy Guide | Tips &amp; Tricks to Start Earning Passive Income</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <meta name="description" content="Explore the ultimate Atlas Earth strategy guide with tips, tricks, and strategies to maximize your passive income. Use referral code 337U20 to get started!" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
@@ -81,7 +82,7 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>Earning Atlas Bucks</h3>
+									<h3>How to Earn  Atlas Bucks in Atlas:Earth</h3>
 									<p>Atlas Bucks (AB) are the in-game currency for Atlas:Earth, which allow you to purchase parcels (land) and begin earning rent.  When you first create your account, you will be given 100 AB.  Here are the fastest ways to begin earning additional Atlas Bucks for free:</p>
 									<h4>Referrals</h4>
                                     <p>Use a referral link or code when you first sign up.  If your friends aren’t playing yet, feel free to use my link (<a href="https://r.atlasearth.com/WgVkoQigxMb" target="_blank">click here</a>) or enter my referral code (<strong>337U20</strong>) into your settings (tap your user icon in the top-left corner, then select the settings icon).  Joining with a referral will give you 200 AB once you’ve acquired your 10th parcel.</p>
@@ -107,7 +108,7 @@
 						<!-- Four -->
 							<section id="four">
 								<div class="container">
-									<h3>Buying Land (Parcels)</h3>
+									<h3>Buying Virtual Real-Estate (Parcels) in Atlas:Earth</h3>
 									<p>Once you have acquired enough Atlas Bucks, you can purchase parcels within your real-time location radius.  Each unowned parcel costs 100 AB.  Simply tap the <strong>BUY LAND</strong> icon on the bottom of the main screen in the app, then tap on the grid square that you would like to purchase.  Select <strong>&quot;Buy Land&quot;</strong>, then confirm your decision on the pop-up. </p>
 									<h4>Land Rarities and Values</h4>
 									<p>Each parcel that you purchase will be randomly assigned one of four possible rarities.  The rarity of your parcel will determine the amount of rent it produces.  The rarities and their associated rent values are:</p>
@@ -123,7 +124,7 @@
                             
                             <section id="five">
 							  <div class="container">
-								<h3>Rent Boosting</h3>
+								<h3>Rent Boosting to Increase Passive Income</h3>
 								  <p>Boosting your rent is absolutely crucial for earning real-world money in Atlas:Earth.  Boosts multiply your parcel income depending on the number of parcels owned, and you can stack your boosts for up to 6 hours at a time.  For a  breakdown of boost multipliers, <a href="https://atlasreality.helpshift.com/hc/en/3-atlas-earth/faq/39-why-do-ad-boosts-change-and-how-do-i-see-my-current-boost-rate/" target="_blank">see here</a>.</p>
 								  <p>To activate your boost multiplier, simply tap the BOOST icon in the top-right corner of the app, then select WATCH AD.  As always, you can just set your phone down and check back a minute later instead of subjecting yourself to the ads. </p>
 								  <p><strong>NOTE: </strong>Once a month or so, Atlas:Earth will hold a <strong>Super Rent Boost</strong> event. These events last about 36 hours, and provide a 50x multiplier, regardless of what tier you're on.</p>
