--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							</section>
                             
                             <!-- Compact Call-to-Action Section -->
-<section id="cta" style="background-color: #e9ecef; padding: 10px; text-align: center; margin: 20px 0;">
+<section id="cta" style="background-color: #e9ecef; padding: 10px; text-align: center; margin: 20px auto; width: 80%; max-width: 800px;">
     <p><strong>Get started with Atlas:Earth and earn extra Atlas Bucks!</strong> Use my referral code <span style="font-weight: bold; color: #007bff;">337U20</span> when you sign up.</p>
     <a href="https://r.atlasearth.com/WgVkoQigxMb" target="_blank" style="display: inline-block; padding: 5px 10px; background-color: #007bff; color: #fff; text-decoration: none; border-radius: 3px; font-size: 14px;">Download Now</a>
 </section>
