--- a/index.html
+++ b/index.html
@@ -54,14 +54,18 @@
 								<div class="image main" data-position="center">
 									<img src="images/banner1.jpg" alt="" />
 								</div>
-								<div class="container">
+							  <div class="container">
 									<header class="major">
 										<h2>Atlas Earth Strategy Guide</h2>
 										<p>Welcome to my (unofficial) beginner's guide to  the <a href="https://r.atlasearth.com/WgVkoQigxMb" target="_blank">Atlas:Earth</a> app.</p>
 									</header>
 									<p>This guide is designed to help you get started with  Atlas:Earth, and earn as much as possible in your first days/weeks with the  app.  No, you will never &quot;get rich&quot;  playing this game.  However, it&rsquo;s a fun and  unique experience that will earn you some extra money.</p>
-								    <p>If you find this guide helpful, or you just want some extra  Atlas Bucks, consider using my referral code: <strong>337U20</strong>.  More on referrals  can be found below.</p>
-</div>
+                                  <div align="center">
+							      <h3>Get Started with Atlas:Earth! </h3>
+								    <p>Unlock extra Atlas Bucks and start building your virtual real-estate empire with our referral offer. <br>
+								      <strong>Use my referral code: <span style="font-size: 20px; color: #007bff;">337U20</span></strong><br>
+								      Download the app and enter the code to get a special bonus when  you sign up!					                </p> </div>
+                              </div>
 							</section>
 
 						<!-- Two -->
