--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							  <div class="container">
 									<header class="major">
 										<h2>Atlas Earth Strategy Guide</h2>
-										<p>Welcome to my (unofficial) beginner's guide to  the <a href="https://r.atlasearth.com/WgVkoQigxMb" target="_blank">Atlas:Earth</a> app.</p>
+										<p>Welcome to Your Beginner's Guide to <a href="https://r.atlasearth.com/WgVkoQigxMb" target="_blank">Atlas:Earth</a></p>
 									</header>
 									<p>This guide is designed to help you get started with  Atlas:Earth, and earn as much as possible in your first days/weeks with the  app.  No, you will never &quot;get rich&quot;  playing this game.  However, it&rsquo;s a fun and  unique experience that will earn you some extra money.</p>
                                   <div align="center">
