--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 								<div class="container">
 									<h3>What is Atlas:Earth?</h3>
 									<p>Atlas:Earth is currently the number 1 virtual real estate metaverse app on Earth.  It allows you to purchase real-world blocks of land (called parcels) on a virtual map based on your location.  Each parcel you purchase provides you with passive income (referred to as rent).  While it has been available in the United States for some time, Atlas:Earth has recently become available internationally in 2024.   </p>
-									<h4>Can I actually make money?</h4>
-									<p>YES!  Like I said above, this game is not going to make anyone rich.  But as you collect land parcels, you will earn passive income (i.e. money that continually accumulates whether or not you’re using the app).  Patience and a bit of perseverance when you first start out is key.  At first, you’ll be making pennies but as time goes on and you begin to accumulate more parcels, you will start making a few bucks per week. </p>
+									<h4>Can You Actually Make Money with Atlas:Earth?</h4>
+									<p>Absolutely! While Atlas Earth won’t make you rich overnight, it offers a way to earn passive income through virtual real estate. As you acquire and manage land parcels, you’ll start generating steady income that continues to grow over time. Initially, you might see small earnings, but with patience and strategic expansion, your income can increase to a few dollars per week. Stick with it, and your investments will start to pay off!</p>
                                     <h4>Do I need to spend money?</h4>
                                     <p>NO!  The rent you accumulate for your parcels is basically generated from a share in advertising revenue.  There are options to purchase Atlas Dollars, but you really do not need to use your real world money to advance in this game.</p>
                                     <h4>How do I install Atlas:Earth?</h4>
