--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							<section id="two">
 								<div class="container">
 									<h3>What is Atlas:Earth?</h3>
-									<p>Atlas:Earth is currently the number 1 virtual real estate metaverse app on Earth.  It allows you to purchase real-world blocks of land (called parcels) on a virtual map based on your location.  Each parcel you purchase provides you with passive income (referred to as rent).  While it has been available in the United States for some time, Atlas:Earth has recently become available internationally in 2024.   </p>
+									<p>Atlas:Earth is the leading virtual real estate app that lets you buy real-world land parcels on a virtual map. As the top app in the metaverse for real estate, it enables users to earn passive income, known as rent, from their property investments. You can purchase these land parcels based on your real-world location, making it a unique way to earn money. Initially launched in the United States, Atlas:Earth has expanded its reach and is now available globally as of 2024. </p>
 									<h4>Can You Actually Make Money with Atlas:Earth?</h4>
 									<p>Absolutely! While Atlas Earth won’t make you rich overnight, it offers a way to earn passive income through virtual real estate. As you acquire and manage land parcels, you’ll start generating steady income that continues to grow over time. Initially, you might see small earnings, but with patience and strategic expansion, your income can increase to a few dollars per week. Stick with it, and your investments will start to pay off!</p>
                                     <h4>Do I need to spend money?</h4>
