--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							<section id="three">
 								<div class="container">
 									<h3>How to Earn  Atlas Bucks in Atlas:Earth</h3>
-									<p>Atlas Bucks (AB) are the in-game currency for Atlas:Earth, which allow you to purchase parcels (land) and begin earning rent.  When you first create your account, you will be given 100 AB.  Here are the fastest ways to begin earning additional Atlas Bucks for free:</p>
+									<p>  Atlas Bucks (AB) are the essential in-game currency in Atlas:Earth, enabling you to buy land parcels and start earning passive income (rent). Upon creating your account, you’ll receive an initial 100 AB. To maximize your earnings and accumulate more Atlas Bucks quickly, follow these effective strategies for earning free AB:</p>
 									<h4>Referrals</h4>
                                     <p>Use a referral link or code when you first sign up.  If your friends aren’t playing yet, feel free to use my link (<a href="https://r.atlasearth.com/WgVkoQigxMb" target="_blank">click here</a>) or enter my referral code (<strong>337U20</strong>) into your settings (tap your user icon in the top-left corner, then select the settings icon).  Joining with a referral will give you 200 AB once you’ve acquired your 10th parcel.</p>
                                     <p>Essentially, it’s a <strong>20% bonus</strong>.  Once you’ve joined, send your referral code to your contacts.  As the referrer, you will receive 10 AB every time your friend acquires a new parcel.</p>
