--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							  <div class="container">
 									<header class="major">
 										<h2>Atlas Earth Strategy Guide</h2>
-										<p>Welcome to Your Beginner's Guide to <a href="https://r.atlasearth.com/WgVkoQigxMb" target="_blank">Atlas:Earth</a></p>
+										<p>Your Beginner's Guide to Earning Passive Income with <a href="https://r.atlasearth.com/WgVkoQigxMb" target="_blank">Atlas:Earth</a></p>
 									</header>
 									<p>New to the Atlas Earth app? You’re in the right place! Our beginner-friendly guide is here to help you get started with virtual real estate. Discover easy-to-follow tips and strategies that will set you up for success from the very beginning. Learn how to earn Atlas Bucks, buy land, earn passive income, and make the most of your gameplay with straightforward advice and practical insights.</p>
                                   <div align="center">
