--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Atlas Earth Strategy Guide | Tips &amp; Tricks to Start Earning Passive Income</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-        <meta name="description" content="Explore the ultimate Atlas Earth strategy guide with tips, tricks, and strategies to maximize your passive income. Use referral code 337U20 to get started!" />
+        <meta name="description" content="The ultimate Atlas Earth strategy guide with tips, tricks, and strategies to maximize your passive income. Use referral code 337U20 to get started!" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
