--- a/index.html
+++ b/index.html
@@ -88,22 +88,22 @@
 								<div class="container">
 									<h3>How to Earn Free Atlas Bucks in Atlas:Earth</h3>
 									<p>  Atlas Bucks (AB) are the essential in-game currency in Atlas:Earth, enabling you to buy land parcels and start earning passive income (rent). Upon creating your account, you’ll receive an initial 100 AB. To maximize your earnings and accumulate more Atlas Bucks quickly, follow these effective strategies for earning free AB:</p>
-									<h4>Referrals</h4>
+									<h4>1. Referrals</h4>
                                     <p>Use a referral link or code when you first sign up.  If your friends aren’t playing yet, feel free to use my link (<a href="https://r.atlasearth.com/WgVkoQigxMb" target="_blank">click here</a>) or enter my referral code (<strong>337U20</strong>) into your settings (tap your user icon in the top-left corner, then select the settings icon).  Joining with a referral will give you 200 AB once you’ve acquired your 10th parcel.</p>
                                     <p>Essentially, it’s a <strong>20% bonus</strong>.  Once you’ve joined, send your referral code to your contacts.  As the referrer, you will receive 10 AB every time your friend acquires a new parcel.</p>
-                                    <h4>Register your phone number</h4>
+                                    <h4>2. Register your phone number</h4>
                                     <p>This can be done in the settings (tap your icon in the top-left), and you will receive 100 AB.  If you agree to receive text messages, you will get another 50 AB.  <strong>NOTE:</strong> I was hesitant to do this at first, but at the time of writing this (nearly 3 months into playing) I have not received a single text from Atlas:Earth.</p>
-                                    <h4>Advertisements</h4>
+                                    <h4>3. Advertisements</h4>
                                     <p>Click on the <strong>SHOP</strong> icon in the bottom-left, then choose the <strong>FREE</strong> icon.  You can generate 1 AB every 20 minutes.  Obviously, you don’t need to sit there actually watching the ad.  Just tap the icon, put your phone down and come back 30 seconds or so later.  Outside of the US, you will earn 1 AB for every ad watched.  Inside the US,  you earn 2 AB for every ad. </p>
-                                    <h4>Daily login bonus</h4>
+                                    <h4>4. Daily login bonus</h4>
                                     <p>Tap the <strong>calendar</strong> icon on the right side, then tap the daily bonus.  Most days provide 1 AB, but there are milestone rewards (e.g. 8 AB on day 7, 25 AB on day 14, etc.).  <strong>NOTE:</strong> Daily bonuses only begin after you have acquired 3 parcels. See also <strong>Atlas Explorer Club</strong>. </p>
-                                    <h4>Diamond wheel spin</h4>
+                                    <h4>5. Diamond wheel spin</h4>
                                     <p>As you travel around IRL, keep an eye on the in-game map.  You will frequently spot diamonds that you can collect by tapping on them.  Once you have some diamonds, you can spend them on wheel spins found in the <strong>EVENTS</strong> icon (bottom of the screen).  You can spin the wheel up to five times per day to earn AB.  The last two spins require playing advertisements.</p>
-                                    <h4>Atlas Arcade</h4>
+                                    <h4>6. Atlas Arcade</h4>
                                     <p>This is where things get a bit &quot;grindy&quot;, but it pays off (literally). And some of the games are actually fun. Tap the <strong>SHOP</strong> icon and scroll down to the <strong>ATLAS ARCADE</strong> icon.  This will take you to a page with a selection of third-party apps.  Choose an app and read what the requirements are to earn AB.</p>
-                                    <h4>Surveys</h4>
+                                    <h4>7. Surveys</h4>
                                     <p>Tap the <strong>SHOP</strong> icon, scroll down and select the <strong>SURVEYS FOR BUCKS</strong> icon.  This one frustrates a lot of folks in the community, as a LOT of surveys will kick you out part-way through.  However, I have had a bit of luck completing some of them, and quite a few will still provide you with 1 AB after failing.  It’s worth trying periodically, and not a very big time commitment.</p>
-                                    <h4>Purchasing Atlas Bucks</h4>
+                                    <h4>8. Purchasing Atlas Bucks</h4>
                                     <p>You do NOT have to do this to earn money.  In fact, it will likely take a VERY long time to recoup any money that you put into this game.  However, depending on what you want to get out of Atlas Earth, you may decide it’s worth it to purchase AB from time to time.  If your motivation is not financial gain, but rather bragging rights and/or just enjoying collecting land parcels for fun, then this may be the route for you.  Various AB packs can be found in the SHOP icon. </p>
 
 								</div>
