--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             
                             <section id="five">
 							  <div class="container">
-								<h3>Rent Boosting to Increase PassivIncome</h3>
+								<h3>Rent Boosting to Increase Passive Income</h3>
 								  <p>Boosting your rent is absolutely crucial for earning real-world money in Atlas:Earth.  Boosts multiply your parcel income depending on the number of parcels owned, and you can stack your boosts for up to 6 hours at a time.  For a  breakdown of boost multipliers, <a href="https://atlasreality.helpshift.com/hc/en/3-atlas-earth/faq/39-why-do-ad-boosts-change-and-how-do-i-see-my-current-boost-rate/" target="_blank">see here</a>.</p>
 								  <p>To activate your boost multiplier, simply tap the BOOST icon in the top-right corner of the app, then select WATCH AD.  As always, you can just set your phone down and check back a minute later instead of subjecting yourself to the ads. </p>
 								  <p><strong>NOTE: </strong>Once a month or so, Atlas:Earth will hold a <strong>Super Rent Boost</strong> event. These events last about 36 hours, and provide a 50x multiplier, regardless of what tier you're on.</p>
