--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Atlas Earth Strategy Guide | Tips &amp; Tricks to Start Earning Passive Income</title>
+		<title>Atlas Earth Strategy Guide | Tips &amp; Tricks to Earn Free Atlas Bucks</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <meta name="description" content="The ultimate Atlas Earth strategy guide with tips and tricks to earn free Atlas Bucks and maximize passive income. Use referral code 337U20 to get started!" />
